# SummaRapid

./: .gitignore  .samignore  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.aws-sam/: build.toml
app/api/endpoints/: summarize_endpoints.py
app/api/models/: environment_model.py  summarize_models.py
app/api/services/: google_captcha.py  summarize_service.py
app/core/: logger_config.py  settings.py
